--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+app:
+  baseUrl: http://localhost:8080
+
+jwt:
+  secret: ${JWT_SECRET}
+
 spring:
   config:
     import:
@@ -5,9 +11,6 @@ spring:
 
   application:
     name: aigateway
-
-  app:
-    baseUrl: http://localhost:8080
 
   server:
     port: 8080
